<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources>
<resources>

    <string name="app_name">Doge Weather</string>
    <string name="action_credits">Credits</string>
    
    <!-- Location button states -->
    <string name="use_my_location">use my location</string>
    <string name="waiting_location">requesting&#8230;</string>
    <string name="not_connected">wow no connection</string>
    <string name="not_located">such fail not located</string>
    <string name="located">wow located</string>
    
    <!-- Credits -->
    <string name="credits_title">Credits</string>
    <string name="credits_line1">Developed by Alexandre Michalon</string>
    <string name="credits_line2">Inspired by the website <a href="http://dogeweather.com/">dogeweather</a></string>
    <string name="credits_line3">The source code is available on my <a href="https://github.com/alexandremichalon/AndroidDogeWeather">github</a></string>
    <string name="credits_line4">Many thanks to Adrien Debrie an Clément Danila for trolling the repository :)</string>
    <string name="credits_line_license">Dogeweather is licensed under the <a href="http://opensource.org/licenses/MIT">MIT license</a></string>
    
    <!-- Dialogs -->
    <string name="dialog_close">close</string>
    
</resources>
