<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewCredits"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:id="@+id/LayoutCredits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextCredits1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_line1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/credits_txtcolor" />
        
        <TextView
            android:id="@+id/TextCredits2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_line2"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/credits_txtcolor" />
        
        <TextView
            android:id="@+id/TextCredits3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_line3"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/credits_txtcolor" />
        
        <TextView
            android:id="@+id/TextCredits4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credits_line4"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/credits_txtcolor" />
        
        <TextView
            android:id="@+id/TextCreditsLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/credits_line_license"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/credits_txtcolor" />

    </LinearLayout>
    

</ScrollView>
